--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "perltidy-more",
   "displayName": "perltidy-more",
   "description": "Extended perltidy",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "publisher": "Kaktus",
   "engines": {
     "vscode": "^1.11.0"
@@ -26,7 +26,7 @@
         },
         "perltidy-more.profile": {
           "type": "string",
-          "description": "Path to .perltidyrc file"
+          "description": "Path to .perltidyrc file. Use \".../.perltidyrc\" to search profile in current (project) dir and upwards."
         }
       }
     },
