--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "mocha": "^2.3.3",
     "@types/node": "^6.0.40",
     "@types/mocha": "^2.2.32"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kak-tus/perltidy-more.git"
   }
 }
