--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,17 @@
 // A launch configuration that compiles the extension and then opens it inside a new window
 {
-  "version": "0.1.0",
+  "version": "2.0.0",
   "configurations": [
     {
-      "name": "Launch Extension",
       "type": "extensionHost",
       "request": "launch",
+      "name": "Запуск расширения",
       "runtimeExecutable": "${execPath}",
       "args": [
-        "--extensionDevelopmentPath=${workspaceRoot}"
+        "--extensionDevelopmentPath=${workspaceFolder}"
       ],
-      "stopOnEntry": false,
-      "sourceMaps": true,
       "outFiles": [
-        "${workspaceRoot}/out/src/**/*.js"
+        "${workspaceFolder}/out/**/*.js"
       ],
       "preLaunchTask": "npm"
     },
