--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
       "type": "object",
       "title": "perltidy-more configuration",
       "properties": {
+        "perltidy-more.autoDisable": {
+          "type": "boolean",
+          "description": "Disable perltidy for projects without a local .perltidyrc"
+        },
         "perltidy-more.executable": {
           "type": "string",
           "default": "perltidy",
