--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "perltidy-more",
   "displayName": "perltidy-more",
   "description": "Extended perltidy",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "publisher": "Kaktus",
   "engines": {
     "vscode": "^1.23.0"
   },
+  "icon": "logo.png",
   "categories": [
     "Formatters"
   ],
