--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
       "outFiles": [
         "${workspaceFolder}/out/**/*.js"
       ],
-      "preLaunchTask": "npm"
+      "preLaunchTask": "yarn"
     },
     {
       "name": "Launch Tests",
@@ -29,7 +29,7 @@
       "outFiles": [
         "${workspaceRoot}/out/test/**/*.js"
       ],
-      "preLaunchTask": "npm"
+      "preLaunchTask": "yarn"
     }
   ]
 }
