--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "perltidy-more",
   "displayName": "perltidy-more",
   "description": "Extended perltidy",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "publisher": "Kaktus",
   "engines": {
     "vscode": "^1.23.0"
@@ -12,7 +12,7 @@
     "Formatters"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./out/src/extension",
   "contributes": {
